@@ -338,12 +338,10 @@ struct file_id {              /* Unique ID for a file on this machine */
   uintL inode;
 #endif
 };
-/* if file NAMESTRING exists, fill file_id and call function on it,
-   otherwise return NULL */
-extern void* with_file_id (char *namestring, void *data,
-                           void* (*func) (struct file_id *fid, void*data));
-/* fill FI for an existing file handle */
 typedef int errno_t;
+/* fill FI for an exiting namestring */
+extern errno_t namestring_file_id (char *namestring, struct file_id *fi);
+/* fill FI for an existing file handle */
 extern errno_t handle_file_id (int fd, struct file_id *fi);
 /* if the file IDs are identical, return 1, otherwise return 0 */
 extern int file_id_eq (struct file_id *fi1, struct file_id *fi2);
