@@ -838,14 +838,12 @@ global void close_all_fd (void) {
 /* file identification for check_file_re_open() */
 /* if file NAMESTRING exists, fill file_id and call function on it,
    otherwise return NULL */
-global void* with_file_id (char * namestring, void *data,
-                           void* (*func) (struct file_id *, void *data)) {
+global errno_t namestring_file_id (char * namestring, struct file_id *fi) {
   var struct stat st;
-  if (stat(namestring,&st)) return NULL;
-  var struct file_id fi;
-  fi.device = st.st_dev;
-  fi.inode = st.st_ino;
-  return (*func)(&fi,data);
+  if (stat(namestring,&st)) return errno;
+  fi->device = st.st_dev;
+  fi->inode = st.st_ino;
+  return 0;
 }
 
 /* fill FI for an existing file handle */
